<resources>
    <string name="app_name">Contact</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_hint">Search contacts</string>
    <string name="search_menu">Search</string>
    <string name="edit_name_desc">Name</string>
    <string name="phone_number">Phone number</string>
    <string name="email_number">E-mail</string>
    <string name="edit_mask_phone">+37529-xx-xx-xx</string>
    <string name="edit_mask_email">example@exmpl.com</string>
    <string name="rb_phone">Phone</string>
    <string name="rb_email">Email</string>
    <string name="save_menu">Save</string>
    <string name="title_add_frag">Add contact</string>
    <string name="title_edit_frag">Name</string>
    <string name="toast_inc_email">Incorrect E-mail</string>
    <string name="toast_inc_phone">Incorrect phone</string>
    <string name="enter_name">Enter name.</string>
    <string name="ok">ok</string>
    <string name="cancel">cancel</string>
    <string name="alertDialog">Do you really want to delete the contact? The contact will be removed and you will not be able te restore it</string>
    <string name="no_contacts">No contacts</string>
</resources>